--- a/DataFest.html
+++ b/DataFest.html
@@ -378,6 +378,71 @@ $(document).ready(function () {
 
 
 <p>f— title: “DataFest” output: github_document —</p>
+<pre class="r"><code>rpe1 &lt;- rpe %&gt;%
+  filter(PlayerID == 1) %&gt;%
+  mutate(standard_rpe = scale(RPE))
+
+rpe2 &lt;- rpe %&gt;%
+  filter(PlayerID == 2) %&gt;%
+  mutate(standard_rpe = scale(RPE))
+
+rpe3 &lt;- rpe %&gt;%
+  filter(PlayerID == 3) %&gt;%
+  mutate(standard_rpe = scale(RPE))
+
+rpe4 &lt;- rpe %&gt;%
+  filter(PlayerID == 4)%&gt;%
+  mutate(standard_rpe = scale(RPE))
+
+rpe5 &lt;- rpe %&gt;%
+  filter(PlayerID == 5)%&gt;%
+  mutate(standard_rpe = scale(RPE))
+
+rpe6 &lt;- rpe %&gt;%
+  filter(PlayerID == 6)%&gt;%
+  mutate(standard_rpe = scale(RPE))
+
+rpe7 &lt;- rpe %&gt;%
+  filter(PlayerID == 7)%&gt;%
+  mutate(standard_rpe = scale(RPE))
+
+rpe8 &lt;- rpe %&gt;%
+  filter(PlayerID == 8)%&gt;%
+  mutate(standard_rpe = scale(RPE))
+
+rpe9 &lt;- rpe %&gt;%
+  filter(PlayerID == 9)%&gt;%
+  mutate(standard_rpe = scale(RPE))
+
+rpe10 &lt;- rpe %&gt;%
+  filter(PlayerID == 10)%&gt;%
+  mutate(standard_rpe = scale(RPE))
+
+rpe11 &lt;- rpe %&gt;%
+  filter(PlayerID == 11)%&gt;%
+  mutate(standard_rpe = scale(RPE))
+
+rpe12 &lt;- rpe %&gt;%
+  filter(PlayerID == 12)%&gt;%
+  mutate(standard_rpe = scale(RPE))
+
+rpe13 &lt;- rpe %&gt;%
+  filter(PlayerID == 13)%&gt;%
+  mutate(standard_rpe = scale(RPE))
+
+rpe14 &lt;- rpe %&gt;%
+  filter(PlayerID == 14)%&gt;%
+  mutate(standard_rpe = scale(RPE))
+
+rpe15 &lt;- rpe %&gt;%
+  filter(PlayerID == 15)%&gt;%
+  mutate(standard_rpe = scale(RPE))
+
+rpe16 &lt;- rpe %&gt;%
+  filter(PlayerID == 16)%&gt;%
+  mutate(standard_rpe = scale(RPE))
+
+standard_rpe &lt;- rbind(rpe1,rpe2,rpe3,rpe4,rpe5,rpe6,rpe7,rpe8,rpe9,rpe10,rpe11,rpe12,rpe13,rpe14,rpe15,rpe16)</code></pre>
 
 
 
